added rmv to config

--- a/dotfiles/bash/config
+++ b/dotfiles/bash/config
@@ -1,6 +1,10 @@
+[[ -s "$HOME/.rvm/scripts/rvm" ]] && source "$HOME/.rvm/scripts/rvm"
+
 if [ -f `brew --prefix`/etc/bash_completion ]; then
         . `brew --prefix`/etc/bash_completion
 fi
+
+
 
 
 #prompt with pwd and git branch
