--- a/dotfiles/bash/config
+++ b/dotfiles/bash/config
@@ -5,10 +5,18 @@ if [ -f `brew --prefix`/etc/bash_completion ]; then
 fi
 
 
-
+RED="\[\033[0;31m\]"
+GREEN="\[\033[1;32m\]"
+YELLOW="\[\033[1;33m\]"
+BLUE="\[\033[1;34m\]"
+PURPLE="\[\033[1;35m\]"
+TEAL="\[\033[1;36m\]"
+GRAY="\[\033[0;37m\]"
+WHITE="\[\033[0;38m\]"
+reset=$(tput sgr0)
 
 #prompt with pwd and git branch
-PS1="[\W]\$(__git_ps1)$ " 
+PS1="$BLUE[\W]$YELLOW\$(__git_ps1)$reset\$ " 
 
 
 #prompt with pwd for systems with out git/bash-completion installed
