--- a/dotfiles/bash/config
+++ b/dotfiles/bash/config
@@ -7,20 +7,32 @@ fi
 
 RED="\[\033[0;31m\]"
 GREEN="\[\033[1;32m\]"
-YELLOW="\[\033[1;33m\]"
+YELLOW="\[\033[1;93m\]"
 BLUE="\[\033[1;34m\]"
 PURPLE="\[\033[1;35m\]"
 TEAL="\[\033[1;36m\]"
 GRAY="\[\033[0;37m\]"
 WHITE="\[\033[0;38m\]"
+CYAN="\[\033[1;36m\]"
 reset=$(tput sgr0)
+OFF="\[\033[0m\]"
+
+#prompt with pwd, git branch and git dirty status
+
+function parse_git_dirty {
+  [[ $(git status 2> /dev/null | tail -n1) != "nothing to commit (working directory clean)" ]] && echo " ⚡ "
+}
+function parse_git_branch {
+  git branch --no-color 2> /dev/null | sed -e '/^[^*]/d' -e "s/* \(.*\)/[\1$(parse_git_dirty)]/"
+}
+export PS1="$BLUE[\W]$CYAN\$(parse_git_branch)$OFF\$ "
 
 #prompt with pwd and git branch
-PS1="$BLUE[\W]$YELLOW\$(__git_ps1)$reset\$ " 
+#PS1="$BLUE[\W]$YELLOW\$(parse_git_branch)$reset\$ " 
 
 
 #prompt with pwd for systems with out git/bash-completion installed
 #PS1="[\W]$ "
 
 
-
+# ⚠ ⚡ ☆ ★
