--- a/dotfiles/bash/config
+++ b/dotfiles/bash/config
@@ -20,12 +20,12 @@ OFF="\[\033[0m\]"
 #prompt with pwd, git branch and git dirty status
 
 function parse_git_dirty {
-  [[ $(git status 2> /dev/null | tail -n1) != "nothing to commit (working directory clean)" ]] && echo " ⚡ "
+  [[ $(git status 2> /dev/null | tail -n1) != "nothing to commit (working directory clean)" ]] && echo " ☆ "
 }
 function parse_git_branch {
   git branch --no-color 2> /dev/null | sed -e '/^[^*]/d' -e "s/* \(.*\)/[\1$(parse_git_dirty)]/"
 }
-export PS1="$BLUE[\W]$CYAN\$(parse_git_branch)$OFF\$ "
+export PS1="$BLUE[\W]$CYAN\$(parse_git_branch)$OFF\n\$ "
 
 #prompt with pwd and git branch
 #PS1="$BLUE[\W]$YELLOW\$(parse_git_branch)$reset\$ " 
