--- a/dotfiles/bash/config
+++ b/dotfiles/bash/config
@@ -26,7 +26,7 @@ function parse_git_status {
 function parse_git_branch {
   git branch --no-color 2> /dev/null | sed -e '/^[^*]/d' -e "s/* \(.*\)/git:(\1$(parse_git_status))/"
 }
-export PS1="$BLUE\W $PURPLE\$(parse_git_branch) $YELLOW\$ $OFF"
+export PS1="$BLUE\u@\h: $CYAN\W\n$PURPLE\$(parse_git_branch)$YELLOW\$ $OFF"
 
 #prompt with pwd and git branch
 #PS1="$BLUE[\W]$YELLOW\$(parse_git_branch)$reset\$ " 
@@ -39,6 +39,7 @@ export PS1="$BLUE\W $PURPLE\$(parse_git_branch) $YELLOW\$ $OFF"
 
 #PS1="$BLUE[\W]$YELLOW\$(__git_ps1)$reset\$ " 
 
+## Random Characters
 
 # ⚠ ⚡ ☆ ★ ✑", "✒", "÷", "‰", "√", "≠", "∞", "❛", "❜", "™", "©", "®", "✄", "✁", "✂", "✇", "✿", "❀", "“", "”", "„", "‟", "«", "»", "♪", "♫", "…", "◆", "◇", "✣", "✪", "✰", "✧", "✦", "☔", "☕", "☼", "☾", "❆", "❅", "❄", "✵", "♲", "♻", "♿", "⚅", "⚑", "⚐"
 #arrows: "←", "↑", "→", "↓", "↔", "↕", "⇄", "⇅", "↲", "↳", "↴", "↵", "↶", "↷", "↺ ", "↻", "➔", "➘", "➙", "➚", "➜", "➟", "➠", "➤", "➥", "➨", "➫", "➬", "➭", "➮", "➯", "➲", "➳", "➵", "➶", "➷", "➸", "➹", "➺", "➻", "➼", "➽", "➾", "◀", "▶", "◁", "▷", "◊"
