--- a/dotfiles/bash/config
+++ b/dotfiles/bash/config
@@ -20,8 +20,8 @@ OFF="\[\033[0m\]"
 #prompt with pwd, git branch and git dirty status
 
 function parse_git_status {
-  [[ $(git status 2> /dev/null | tail -n1) != "nothing to commit (working directory clean)" ]] && echo -e " \033[0;31m✗\033\[0;35m "
-  [[ $(git status 2> /dev/null | tail -n1) = "nothing to commit (working directory clean)" ]] && echo -e " \033[0;32m✓\033\[0;35m "
+  [[ $(git status 2> /dev/null | tail -n1) != "nothing to commit working directory clean" ]] && echo -e " \033[0;31m✗\033\[0;35m "
+  [[ $(git status 2> /dev/null | tail -n1) = "nothing to commit working directory clean" ]] && echo -e " \033[0;32m✓\033\[0;35m "
 }
 function parse_git_branch {
   git branch --no-color 2> /dev/null | sed -e '/^[^*]/d' -e "s/* \(.*\)/git:(\1$(parse_git_status))/"
